add utils hashing and rendom key endpoints, fix refactioring issues
